#api + #gui : adding new requests and movie view
