# filmbox-gui/src/app/core/model/movie.ts
@@ -1,0 +1,7 @@
+export class Movie {
+  id: number;
+  name: string;
+  description: string;
+  worldReleaseDate: Date;
+  polishReleaseDate: Date;
+}
